[package]
name = "ractor-cluster"
version = "0.4.0"
authors = ["Sean Lawlor", "Evan Au", "Dillon George"]
description = "Distributed cluster environment of Ractor actors"
documentation = "https://docs.rs/ractor"
license = "MIT"
edition = "2018"
keywords = ["actor", "ractor", "cluster"]
repository = "https://github.com/slawlor/ractor"
readme = "../README.md"
homepage = "https://github.com/slawlor/ractor"
categories = ["actor", "erlang"]
build = "src/build.rs"

[build-dependencies]
protobuf-src = "1"
prost-build = { version = "0.11" }

[dependencies]
## Required dependencies
async-trait = "0.1"
bytes = { version = "1" }
# dashmap = "5"
# futures = "0.3"
log = "0.4"
# once_cell = "1"
prost = { version = "0.11" }
ractor = { version = "0.4", features = ["cluster"], path = "../ractor" }
rand = "0.8"
sha2 = "0.10"
tokio = { version = "1", features = ["rt", "time", "sync", "macros", "net"]}

## Optional dependencies
# tokio-rustls = { version = "0.23", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "time", "sync", "macros", "rt-multi-thread"] }
